redesign hero section

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
           <div class="text-1">Hello 👋 I'm</div>
           <div class="text-2">Md Emon Hosen</div>
           <div class="text-3">And I'm a <span class="typing"></span></div>
-          <a class="web" href="#contact"
-            >I need a website <i class="fa fa-angle-right"></i>
-          </a>
-          <!-- <a
-            href="https://www.linkedin.com/in/w3emon"
-            target="_blank"
-            rel="noreferrer"
-            >I'm looking to hire <i class="fad fa-angle-right"></i>
-          </a> -->
 
-          <a href="./images/emon_cv.pdf" download
-            >Download CV <i class="fa-solid fa-chevron-down"></i>
-          </a>
+          <div class="hero__btn-group">
+            <!-- whatsapp btn -->
+            <a href="https://wa.me/+8801987371847" target="_blank"
+              >WhatsApp <img src="./images/whatsapp-icon.png" alt="whatsapp"
+            /></a>
+
+            <!-- Download btn -->
+            <a href="./images/emon_cv.pdf" download>
+              Download CV
+              <img src="./images/download-icon.png" alt="download" />
+            </a>
+          </div>
         </div>
         <div class="circle_img">
           <img class="my_img" src="./images/my_img.jpg" alt="emon" />
